// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MigrationCredentialsModal /> snapshots basic 1`] = `
<body>
  <div />
  <div
    aria-describedby="modal-1-desc"
    aria-labelledby="modal-1-title"
    aria-modal="true"
    class="modal"
    role="dialog"
  >
    <div
      class="dialog small"
    >
      <div
        class="modalContent"
      >
        <div
          class="wrapper modalHeader"
        >
          <div>
            <div
              class="title"
              id="modal-1-title"
            >
              Setup migration
            </div>
            <div
              class="subtitle"
            />
          </div>
          <button
            aria-disabled="false"
            class="ui-button-wrapper-cef1 material-icons icon ui-iconbutton-wrapper-b819 ui-iconbutton-medium-b819 ui-button-ghost-cef1 ui-button-secondary-cef1"
            type="button"
          >
            <span
              class="ui-button-content-cef1"
            >
              <i
                aria-hidden="true"
                class="material-icons ui-buttonicon-icon-e486 ui-buttonicon-medium-e486 material-icons"
              >
                close
              </i>
            </span>
          </button>
        </div>
        <div
          class="wrapper wrapper"
          id="modal-1-desc"
        >
          <div
            class="wrapper"
          >
            <img
              alt="HelpDocs"
              class="logo"
              src="test-file-stub"
            />
            <div>
              <div
                class="title"
              >
                HelpDocs
              </div>
              <div
                class="url"
              >
                www.helpdocs.io
              </div>
            </div>
          </div>
          <div
            class="mb-4"
          />
          <h4>
            Enter your API credentials
          </h4>
          <p>
            Need help finding this info? Follow
             
            <a
              href="www.helpdocs.io"
              rel="noopener noreferrer"
            >
              these instructions
            </a>
             
            from 
            HelpDocs
            .
          </p>
          <div
            class="mb-4"
          />
          <form>
            <div>
              <label
                class="ui-label-label-a11c label"
                for="input-text-2"
              >
                Email
                <abbr
                  aria-label="required"
                  class="ui-label-abbr-a11c"
                  title="required"
                >
                  *
                </abbr>
              </label>
              <div
                class="wrapper"
              >
                <input
                  autocomplete="new-password"
                  class="input"
                  data-resizable="false"
                  id="input-text-2"
                  name="email"
                  placeholder="Your work email"
                  required=""
                  type="email"
                  value=""
                />
              </div>
            </div>
            <div
              class="mb-4"
            />
            <div>
              <label
                class="ui-label-label-a11c label"
                for="input-text-4"
              >
                API Key
                <abbr
                  aria-label="required"
                  class="ui-label-abbr-a11c"
                  title="required"
                >
                  *
                </abbr>
              </label>
              <div
                class="wrapper"
              >
                <input
                  autocomplete="new-password"
                  class="input"
                  data-resizable="false"
                  id="input-text-4"
                  name="api_key"
                  placeholder="****************"
                  required=""
                  type="password"
                  value=""
                />
              </div>
            </div>
            <div
              class="mb-4"
            />
            <button
              aria-disabled="false"
              class="ui-button-wrapper-cef1 w-100 ui-button-fill-cef1 ui-button-primary-cef1"
              type="submit"
            >
              <span
                class="ui-button-content-cef1"
              >
                Connect
              </span>
            </button>
          </form>
          <div
            class="mb-4"
          />
          <p
            class="mb-0"
          >
            By providing your API credentials to 
            HelpDocs
            , you’re enabling us to retrieve your 
            HelpDocs
             data.
          </p>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`<MigrationCredentialsModal /> snapshots errors on fields 1`] = `
<body>
  <div />
  <div
    aria-describedby="modal-11-desc"
    aria-labelledby="modal-11-title"
    aria-modal="true"
    class="modal"
    role="dialog"
  >
    <div
      class="dialog small"
    >
      <div
        class="modalContent"
      >
        <div
          class="wrapper modalHeader"
        >
          <div>
            <div
              class="title"
              id="modal-11-title"
            >
              Setup migration
            </div>
            <div
              class="subtitle"
            />
          </div>
          <button
            aria-disabled="false"
            class="ui-button-wrapper-cef1 material-icons icon ui-iconbutton-wrapper-b819 ui-iconbutton-medium-b819 ui-button-ghost-cef1 ui-button-secondary-cef1"
            type="button"
          >
            <span
              class="ui-button-content-cef1"
            >
              <i
                aria-hidden="true"
                class="material-icons ui-buttonicon-icon-e486 ui-buttonicon-medium-e486 material-icons"
              >
                close
              </i>
            </span>
          </button>
        </div>
        <div
          class="wrapper wrapper"
          id="modal-11-desc"
        >
          <div
            class="wrapper"
          >
            <img
              alt="HelpDocs"
              class="logo"
              src="test-file-stub"
            />
            <div>
              <div
                class="title"
              >
                HelpDocs
              </div>
              <div
                class="url"
              >
                www.helpdocs.io
              </div>
            </div>
          </div>
          <div
            class="mb-4"
          />
          <h4>
            Enter your API credentials
          </h4>
          <p>
            Need help finding this info? Follow
             
            <a
              href="www.helpdocs.io"
              rel="noopener noreferrer"
            >
              these instructions
            </a>
             
            from 
            HelpDocs
            .
          </p>
          <div
            class="mb-4"
          />
          <form>
            <div>
              <label
                class="ui-label-label-a11c label"
                for="input-text-12"
              >
                Email
                <abbr
                  aria-label="required"
                  class="ui-label-abbr-a11c"
                  title="required"
                >
                  *
                </abbr>
              </label>
              <div
                class="wrapper hasError"
              >
                <input
                  autocomplete="new-password"
                  class="input"
                  data-resizable="false"
                  id="input-text-12"
                  name="email"
                  placeholder="Your work email"
                  required=""
                  type="email"
                  value=""
                />
              </div>
              <div
                class="caption error"
                id="input-text-12-caption"
              >
                This is not a valid email
              </div>
            </div>
            <div
              class="mb-4"
            />
            <div>
              <label
                class="ui-label-label-a11c label"
                for="input-text-14"
              >
                API Key
                <abbr
                  aria-label="required"
                  class="ui-label-abbr-a11c"
                  title="required"
                >
                  *
                </abbr>
              </label>
              <div
                class="wrapper hasError"
              >
                <input
                  autocomplete="new-password"
                  class="input"
                  data-resizable="false"
                  id="input-text-14"
                  name="api_key"
                  placeholder="****************"
                  required=""
                  type="password"
                  value=""
                />
              </div>
              <div
                class="caption error"
                id="input-text-14-caption"
              >
                The provided API key is outdated
              </div>
            </div>
            <div
              class="mb-4"
            />
            <button
              aria-disabled="true"
              class="ui-button-wrapper-cef1 w-100 ui-button-fill-cef1 ui-button-primary-cef1 ui-button-isdisabled-cef1"
              type="button"
            >
              <svg
                class="ui-loadingspinner-spinner-fc79 ui-loadingspinner-gloom-fc79 ui-buttonspinner-spinner-a731"
                data-name="loading-spinner"
                height="22"
                preserveAspectRatio="xMidYMid meet"
                role="status"
                viewBox="0 0 20 20"
                width="22"
              >
                <circle
                  class="ui-loadingspinner-dot-fc79"
                  cx="10"
                  cy="10"
                  fill="none"
                  r="6"
                  stroke-width="2"
                />
                <circle
                  class="ui-loadingspinner-circle-fc79"
                  cx="10"
                  cy="10"
                  fill="none"
                  r="6"
                  stroke-width="2"
                />
                <span
                  class="sr-only"
                >
                  Loading...
                </span>
              </svg>
              <span
                class="ui-button-content-cef1"
              >
                Connecting
              </span>
            </button>
          </form>
          <div
            class="mb-4"
          />
          <p
            class="mb-0"
          >
            By providing your API credentials to 
            HelpDocs
            , you’re enabling us to retrieve your 
            HelpDocs
             data.
          </p>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`<MigrationCredentialsModal /> snapshots loading 1`] = `
<body>
  <div />
  <div
    aria-describedby="modal-6-desc"
    aria-labelledby="modal-6-title"
    aria-modal="true"
    class="modal"
    role="dialog"
  >
    <div
      class="dialog small"
    >
      <div
        class="modalContent"
      >
        <div
          class="wrapper modalHeader"
        >
          <div>
            <div
              class="title"
              id="modal-6-title"
            >
              Setup migration
            </div>
            <div
              class="subtitle"
            />
          </div>
          <button
            aria-disabled="false"
            class="ui-button-wrapper-cef1 material-icons icon ui-iconbutton-wrapper-b819 ui-iconbutton-medium-b819 ui-button-ghost-cef1 ui-button-secondary-cef1"
            type="button"
          >
            <span
              class="ui-button-content-cef1"
            >
              <i
                aria-hidden="true"
                class="material-icons ui-buttonicon-icon-e486 ui-buttonicon-medium-e486 material-icons"
              >
                close
              </i>
            </span>
          </button>
        </div>
        <div
          class="wrapper wrapper"
          id="modal-6-desc"
        >
          <div
            class="wrapper"
          >
            <img
              alt="HelpDocs"
              class="logo"
              src="test-file-stub"
            />
            <div>
              <div
                class="title"
              >
                HelpDocs
              </div>
              <div
                class="url"
              >
                www.helpdocs.io
              </div>
            </div>
          </div>
          <div
            class="mb-4"
          />
          <h4>
            Enter your API credentials
          </h4>
          <p>
            Need help finding this info? Follow
             
            <a
              href="www.helpdocs.io"
              rel="noopener noreferrer"
            >
              these instructions
            </a>
             
            from 
            HelpDocs
            .
          </p>
          <div
            class="mb-4"
          />
          <form>
            <div>
              <label
                class="ui-label-label-a11c label"
                for="input-text-7"
              >
                Email
                <abbr
                  aria-label="required"
                  class="ui-label-abbr-a11c"
                  title="required"
                >
                  *
                </abbr>
              </label>
              <div
                class="wrapper"
              >
                <input
                  autocomplete="new-password"
                  class="input"
                  data-resizable="false"
                  id="input-text-7"
                  name="email"
                  placeholder="Your work email"
                  required=""
                  type="email"
                  value=""
                />
              </div>
            </div>
            <div
              class="mb-4"
            />
            <div>
              <label
                class="ui-label-label-a11c label"
                for="input-text-9"
              >
                API Key
                <abbr
                  aria-label="required"
                  class="ui-label-abbr-a11c"
                  title="required"
                >
                  *
                </abbr>
              </label>
              <div
                class="wrapper"
              >
                <input
                  autocomplete="new-password"
                  class="input"
                  data-resizable="false"
                  id="input-text-9"
                  name="api_key"
                  placeholder="****************"
                  required=""
                  type="password"
                  value=""
                />
              </div>
            </div>
            <div
              class="mb-4"
            />
            <button
              aria-disabled="true"
              class="ui-button-wrapper-cef1 w-100 ui-button-fill-cef1 ui-button-primary-cef1 ui-button-isdisabled-cef1"
              type="button"
            >
              <svg
                class="ui-loadingspinner-spinner-fc79 ui-loadingspinner-gloom-fc79 ui-buttonspinner-spinner-a731"
                data-name="loading-spinner"
                height="22"
                preserveAspectRatio="xMidYMid meet"
                role="status"
                viewBox="0 0 20 20"
                width="22"
              >
                <circle
                  class="ui-loadingspinner-dot-fc79"
                  cx="10"
                  cy="10"
                  fill="none"
                  r="6"
                  stroke-width="2"
                />
                <circle
                  class="ui-loadingspinner-circle-fc79"
                  cx="10"
                  cy="10"
                  fill="none"
                  r="6"
                  stroke-width="2"
                />
                <span
                  class="sr-only"
                >
                  Loading...
                </span>
              </svg>
              <span
                class="ui-button-content-cef1"
              >
                Connecting
              </span>
            </button>
          </form>
          <div
            class="mb-4"
          />
          <p
            class="mb-0"
          >
            By providing your API credentials to 
            HelpDocs
            , you’re enabling us to retrieve your 
            HelpDocs
             data.
          </p>
        </div>
      </div>
    </div>
  </div>
</body>
`;
